force-app/main/default/objects/Admission_IPD__c/Admission_IPD__c.object-meta.xml
<CustomObject>
    <label>Admission(IPD)</label>
    <nameField>
        <displayFormat>IPD-{0000}</displayFormat>
        <label>Admission(IPD) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admission(IPD)s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>