force-app/main/default/objects/Admission_IPD__c/fields/Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Date__c</fullName>
    <label>Admission Date</label>
    <type>DateTime</type>
</CustomField>