force-app/main/default/objects/Admission_IPD__c/fields/Bed_Type__c.field-meta.xml
<CustomField>
    <fullName>Bed_Type__c</fullName>
    <label>Bed Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Emergency</fullName>
                <default>true</default>
                <label>Emergency</label>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>Maternity</fullName>
            </value>
            <value>
                <fullName>Pediatric</fullName>
            </value>
            <value>
                <fullName>Ventilator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>