force-app/main/default/objects/Admission_IPD__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Admission(IPD)s</relationshipLabel>
    <relationshipName>Admission_IPD_s</relationshipName>
    <type>Lookup</type>
</CustomField>