force-app/main/default/objects/Admission_IPD__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Admission(IPD)s</relationshipLabel>
    <relationshipName>Admission_IPD_s</relationshipName>
    <type>Lookup</type>
</CustomField>